# ATHENApt

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
ATHENApp_plot_tool/: plot_slice.py
ATHENApp_plot_tool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ATHENApt/: plot_slice.py
Tests/: disk.out2.00800.athdf  test_plot_slice.py
src/ATHENApt/: plot_slice.py
src/ATHENApt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tst/: test_plot_slice.py
