[metadata]
name = ATHENApt
version = 0.0.4
author = Ruiqi Yang, Xiaoyuan Yang, Ruining Zhao
description = This is a complementary Python package for ATHENA++ visualization inspred by ATHENA++ plotting scripts. More test examples and .athdf files for test, please visit package Home-page.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0RuiqiYang0/ATHENApt
license = GPL-3.0

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = tst/*
